[package]
name = "esp32_receiver"
version = "0.1.0"
authors = ["Antigravity"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = "0.4"
anyhow = "1.0"
esp-idf-svc = { version = "0.52.1", default-features = false }
esp-idf-hal = "0.46.2"
esp-idf-sys = "0.37.2"

[build-dependencies]
embuild = { version = "0.32.0", features = ["espidf"] }
